<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/profile"
        android:layout_width="282dp"
        android:layout_height="350dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/studentcard_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginBottom="140dp"
        android:layout_gravity="center"
        app:cardCornerRadius="150dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/avatar"
            app:srcCompat="@drawable/default_avatar" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/fullNameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/profile"
        app:layout_constraintVertical_bias="0.197"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/group"
        android:layout_width="74dp"
        android:layout_height="29dp"
        android:text="@string/group"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.170"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/groupInfo"
        android:layout_width="53dp"
        android:layout_height="20dp"
        android:text="@string/group"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toBottomOf="@+id/group"
        app:layout_constraintVertical_bias="0.12"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/dob"
        android:layout_width="155dp"
        android:layout_height="29dp"
        android:text="@string/dob"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toBottomOf="@+id/groupInfo"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/dobInfo"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:text="@string/dob"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toBottomOf="@+id/group"
        app:layout_constraintVertical_bias="0.706"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/iin"
        android:layout_width="47dp"
        android:layout_height="29dp"
        android:text="@string/iin"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toEndOf="@+id/group"
        app:layout_constraintTop_toTopOf="@+id/profile"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/iinInfo"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginBottom="96dp"
        android:text="@string/iinInfo"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toEndOf="@+id/groupInfo"
        app:layout_constraintTop_toBottomOf="@+id/iin"
        app:layout_constraintVertical_bias="0.432" />

    <TextView
        android:id="@+id/sex"
        android:layout_width="40dp"
        android:layout_height="29dp"
        android:text="@string/sex"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/dob"
        app:layout_constraintTop_toBottomOf="@+id/iinInfo"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/share"
        android:layout_width="212dp"
        android:layout_height="31dp"
        android:background="@drawable/button_background"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        app:layout_constraintVertical_bias="0.344"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="100dp"
        android:layout_height="31dp"
        android:background="@drawable/button_background"
        android:text="@string/close"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share"
        app:layout_constraintVertical_bias="0.915" />

    <TextView
        android:id="@+id/sexInfo"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:text="@string/sex"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintHorizontal_bias="0.643"
        app:layout_constraintStart_toEndOf="@+id/dobInfo"
        app:layout_constraintTop_toBottomOf="@+id/sex"
        app:layout_constraintVertical_bias="0.338" />

</androidx.constraintlayout.widget.ConstraintLayout>