<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/rounded_top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginBottom="100dp"
        android:layout_gravity="center"
        app:cardCornerRadius="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/avatar"
            app:srcCompat="@drawable/default_avatar" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.186" />

    <TextView
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:text="@string/group"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        app:layout_constraintVertical_bias="0.141"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/studentCard"
        android:layout_width="212dp"
        android:layout_height="26dp"
        android:background="@drawable/edittext_background"
        android:text="@string/studentcard"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:paddingStart="-13dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/announcement"
        android:layout_width="155dp"
        android:layout_height="110dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/main_color_button"
        android:gravity="start|center_vertical"
        android:padding="25dp"
        android:text="@string/announcement"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/appeal"
        app:layout_constraintEnd_toStartOf="@+id/news"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/announcementImg"
        android:layout_width="30dp"
        android:layout_height="26dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/announcement"
        app:layout_constraintEnd_toEndOf="@+id/announcement"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="@+id/announcement"
        app:layout_constraintTop_toTopOf="@+id/announcement"
        app:layout_constraintVertical_bias="0.238"
        app:srcCompat="@drawable/announcement"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/news"
        android:layout_width="155dp"
        android:layout_height="110dp"
        android:layout_marginStart="210dp"
        android:layout_marginEnd="337dp"
        android:background="@drawable/main_color_button"
        android:gravity="start|center_vertical"
        android:padding="25dp"
        android:text="@string/news"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/appeal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/newsImg"
        android:layout_width="30dp"
        android:layout_height="26dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/news"
        app:layout_constraintEnd_toEndOf="@+id/news"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="@+id/news"
        app:layout_constraintTop_toTopOf="@+id/news"
        app:layout_constraintVertical_bias="0.238"
        app:srcCompat="@drawable/news_white"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/appeal"
        android:layout_width="320dp"
        android:layout_height="118dp"
        android:layout_margin="85dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:gravity="start|center_horizontal"
        android:padding="20dp"
        android:text="@string/appeal"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        app:layout_constraintVertical_bias="0.539"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="229dp"
        android:layout_height="59dp"
        android:layout_marginStart="20dp"
        android:text="@string/appeal_content"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/appeal"
        app:layout_constraintStart_toStartOf="@+id/appeal"
        app:layout_constraintTop_toTopOf="@+id/appeal"
        app:layout_constraintVertical_bias="0.689"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="59dp"
        android:layout_height="52dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/appeal"
        app:layout_constraintEnd_toEndOf="@+id/appeal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/appeal"
        app:layout_constraintVertical_bias="0.472"
        app:srcCompat="@drawable/gobutton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="16dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/studentCard"
        app:layout_constraintEnd_toEndOf="@+id/studentCard"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="@+id/studentCard"
        app:layout_constraintTop_toTopOf="@+id/studentCard"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/arrow_top_right" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="144dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        app:srcCompat="@drawable/settings" />

</androidx.constraintlayout.widget.ConstraintLayout>