<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_top_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="61dp"
        android:layout_height="29dp"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="305dp"
        android:layout_height="144dp"
        android:background="@drawable/login_background"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/_7"
            android:text="@string/_7"
            android:inputType="phone"
            android:padding="13dp" />
        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:text="@string/Continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>