<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appealText"
        android:layout_width="150dp"
        android:layout_height="29dp"
        android:text="@string/appeal"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="73dp"
        android:text="@string/appeal_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topBar"
        app:layout_constraintVertical_bias="0.347"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/content"
        android:layout_width="310dp"
        android:layout_height="130dp"
        android:layout_marginBottom="388dp"
        android:autofillHints=""
        android:background="@drawable/content_appeal_background"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minLines="2"
        android:padding="20dp"
        android:scrollHorizontally="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <Button
        android:id="@+id/send"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:background="@drawable/button_background"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintVertical_bias="0.158" />

</androidx.constraintlayout.widget.ConstraintLayout>